# front-ipam-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml
src/: main.rs
src/components/: location.rs  login.rs  mod.rs  mount_point.rs  navbar.rs  network.rs  networks.rs  office.rs
src/models/: network.rs
src/utils/: login.rs
