[package]
name = "front-ipam-dioxus"
version = "0.1.0"
authors = ["micro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
ipnet = { version = "2.11.0", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
utils_ipam = { git = "https://github.com/micro271/ipam-rs", features = ["types"], version = "0.1.0" }
uuid = { version = "1.13.1", features = ["serde"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Request", "RequestCredentials", "RequestInit", "RequestMode", "Response", "Storage", "Window"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
